# b3

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSING.md  NOTICE  PATENTS  README.md  SECURITY.md  install.sh
.github/: .gitkeep-readme
browser/: manifest.json
browser/css/: dashboard.css
browser/js/: animations.js  audio-devices.js  boot.js  core.js  daemon-ws.js  files.js  gpu.js  info.js  layout.js  led.js  reliable.js  rtc.js  terminal.js  tts.js  voice-play.js  voice-record.js  ws.js
browser/js/animations/: aurora.js  breathing.js  chase.js  fire.js  gradient.js  solid.js  sparkle.js  wave.js
crates/b3-cli/: Cargo.toml
crates/b3-cli/src/: config.rs  http.rs  logging.rs  main.rs  service.rs  skills.rs
crates/b3-cli/src/bridge/: mod.rs  puller.rs
crates/b3-cli/src/commands/: attach.rs  child.rs  hive.rs  login.rs  mod.rs  set_password.rs  setup.rs  start.rs  status.rs  stop.rs  uninstall.rs  update.rs  version.rs
crates/b3-cli/src/crypto/: hive.rs  hive_integration.rs  mod.rs
crates/b3-cli/src/daemon/: ec2_proxy.rs  fork_state.rs  gpu_client.rs  info_archive.rs  ipc.rs  mod.rs  protocol.rs  rtc.rs  server.rs  tts_archive.rs  web.rs
crates/b3-cli/src/mcp/: b3.rs  manager.rs  mod.rs  registry.rs  session_memory.rs  voice.rs
crates/b3-cli/src/mesh/: config.rs  mod.rs  tunnel.rs
crates/b3-cli/src/pty/: attach.rs  manager.rs  mod.rs
crates/b3-cli/tests/: session_allocation.rs
crates/b3-common/: Cargo.toml
crates/b3-common/src/: backoff.rs  errors.rs  health.rs  lib.rs  limits.rs  tts.rs
crates/b3-gpu-relay/: Cargo.toml  build.rs
crates/b3-gpu-relay/src/: main.rs
crates/b3-reliable/: Cargo.toml  README.md
crates/b3-reliable/src/: bridge.rs  channel.rs  crypto.rs  frame.rs  lib.rs  multi.rs  session.rs
crates/b3-tunnel/: Cargo.toml
crates/b3-tunnel/src/: lib.rs
crates/b3-webrtc/: Cargo.toml  README.md
crates/b3-webrtc/src/: channel.rs  lib.rs  peer.rs  signaling.rs
docs/: architecture.md  forking-guide.md  getting-started.md  mcp-api.md
gpu-worker/: .dockerignore  Dockerfile  README.md  billing.py  build.sh  entrypoint.sh  handler.py  ipc_bridge.py  local_server.py
gpu-worker/default-voices/: chen-wei.pt  cleo.pt  cloister-leoni.pt  cloister-sadie.pt  ellen-ferguson.pt  francisco-meyer.pt  gertrude-carroll.pt  jimmy-hawkins.pt  kyle-smith.pt  lois-brown.pt  ray-bates.pt  roger-jackson.pt  sheila-bishop.pt  tracy-carlson.pt  vera-amelia.pt  vera-original.pt  vera.pt  zara.pt
investigations/: rtc-terminal-garbling.md
ios/: Version.swift
ios/Babel3/: Babel3App.swift  BroadcastMonitor.swift  ContentView.swift  DashboardView.swift  DemoOverlay.swift  Info.plist  NativeBridge.swift  OnboardingView.swift
ios/Babel3.xcodeproj/: project.pbxproj
ios/Babel3.xcodeproj/project.xcworkspace/xcuserdata/yaniv.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Babel3.xcodeproj/xcshareddata/xcschemes/: Babel3.xcscheme
ios/Babel3.xcodeproj/xcuserdata/yaniv.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/BroadcastExtension/: SampleHandler.swift
ios/BroadcastExtensionSetupUI/: BroadcastExtensionSetupUI.entitlements  BroadcastSetupViewController.swift
plugins/: README.md
plugins/b3/: .mcp.json
plugins/b3/.claude-plugin/: plugin.json
plugins/b3/skills/b3-codebase/: SKILL.md
plugins/b3/skills/b3-codebase/examples/: voice-round-trip.md
plugins/b3/skills/b3-codebase/references/: app-proxy.md  child-agents.md  daemon-architecture.md  gpu-worker.md  mcp-tools.md
plugins/b3/skills/session-recall/: SKILL.md
plugins/b3/skills/session-recall/references/: configuration.md  resurface-api.md
tests/: gpu-reliability-test.sh  test-multi-transport.js  test-reconnect-reliability.js
