[package]
name = "b3-gpu-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reliability relay sidecar — wraps GPU worker WebSocket with b3-reliable"

[[bin]]
name = "b3-gpu-relay"
path = "src/main.rs"

[features]
# EXPERIMENTAL: WebRTC support is not actively maintained and may not work.
webrtc-experimental = ["dep:b3-webrtc"]

[dependencies]
b3-reliable = { path = "../b3-reliable" }
b3-tunnel = { path = "../b3-tunnel" }
# EXPERIMENTAL: WebRTC support is not actively maintained and may not work.
b3-webrtc = { path = "../b3-webrtc", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = { workspace = true }
x25519-dalek = { workspace = true }
rand = "0.8"
reqwest = { workspace = true }
