[package]
name = "b3-webrtc"
version.workspace = true
edition.workspace = true
description = "WebRTC data channel abstraction for Babel3 — wraps datachannel-rs"

[lints]
workspace = true

[dependencies]
datachannel = { version = "0.16", features = ["vendored"] }
datachannel-sys = "0.23"  # Direct access to rtcInitLogger for safe callback
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true }
